fixing spacing issues adhering to 0.5 rem gap

--- a/apps/modernization-ui/src/design-system/checkbox/checkboxGroup.module.scss
+++ b/apps/modernization-ui/src/design-system/checkbox/checkboxGroup.module.scss
@@ -8,12 +8,18 @@
     legend {
         padding-top: 0;
         color: colors.$base-darkest;
+        margin-bottom: 0.5rem;
+    }
+
+    .error {
+        margin-bottom: 0.5rem;
+        padding-top: 0;
     }
 
     .options {
         display: flex;
         flex-direction: row;
-        gap: 0.75rem 1.5rem;
+        gap: 0.5rem;
         flex-wrap: wrap;
     }
 
